--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
+    "coveralls": "^3.0.2",
     "express": "^4.16.4",
+    "knex": "^0.16.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "sqlite3": "^4.0.4",
     "typescript": "3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "createdb": "node -e \"require('./createdb')('db').then(process.exit)"
   },
   "eslintConfig": {
     "extends": "react-app"
