--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ jobs:
   - stage: Produce Coverage
     node_js: "10.7.0"
     script: yarn test --coverage --coverageReporters=text-lcov | coveralls && rm -rf ./coverage
+  - stage: Write Database with seeds
+    node_js: "10.7.0",
+    script: yarn createdb && yarn writeseeds
+
