--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
+    "bulma": "^0.7.2",
     "coveralls": "^3.0.2",
     "express": "^4.16.4",
     "knex": "^0.16.3",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
@@ -21,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "createdb": "node -e \"require('./createdb')('db').then(process.exit)"
+    "createdb": "node -e \"require('./dbtools').create('db').then(process.exit)",
+    "writeseeds": "node -e \"require('./dbtools').seed('db').then(process.exit)"
   },
   "eslintConfig": {
     "extends": "react-app"
